# bryceboe.com

./: .gitignore  CNAME  README.md  index.html  index10.html  index11.html  index12.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html  pelicanconf.py  publishconf.py  pyproject.toml  sitemap.xml
archives/: index.html
content/: a-day-with-digg-pricetrackr-was-dugg.md  a-little-time-for-bryceboecom.md  a-loss.md  amazon-s3-convert-objects-to-reduced-redundancy-storage.md  and-more-ucsb-soccer-beats-ucla-in-ncaa-finals.md  appraisal-fraud.md  backups.md  btimer-class-a-javascript-timer-class.md  bye-bye-facebook-a-guide-to-leaving-facebook.md  bye-bye-google-the-end-of-a-great-summer.md  bypassing-gogos-inflight-internet-authentication.md  college-extended.md  combining-php-and-python.md  computer-science-at-the-center-of-the-universe.md  core-2-duo-prices-drop.md  daniel-boe.md  defcon-18-quals-forensics-200-write-up.md  defcon-19-quals-forensics-100-and-forensics-300-solution.md  django.md  dynamic-programming--e2-80-93-coin-change-problem-in-python.md  dynamic-programming-coin-change-problem-in-python.md  everything-but-research.md  f8-08--e2-80-93-the-facebook-developers-conference.md  f8-08-the-facebook-developers-conference.md  facebook-photograbber-updates.md  flat-stanley-e2-80-99s-not-so-adventures-at-ucsb.md  flat-stanleys-not-so-adventures-at-ucsb.md  german-autofest-2006.md  getting-back-on-the-horse.md  good-eatings-breakfast.md  good-eatings-dinner.md  good-eatings-lunch.md  good-eatings-snack-time.md  (+92 more)
(+195 files in other folders)
